before integrating it with oracle

--- a/neptune/Form2.resx
+++ b/neptune/Form2.resx
@@ -663,7 +663,7 @@
         x8dabo4/Z6bknb4/hYzdf8BllD0AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button11.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAXtJREFUOE99
         kz0vRFEQhu2HIFGIyFkSyRYKIpINsqXSJqKR0ChVCqHeX6BS0eh0ym2VIkqFSoFIFArRia8gwfPOnVk3
